--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-
+    <h1>JamesBranch</h1>
     <form id='form' name="form" action="/child.html" method="GET">
         <div class="items">
             <label for="name">Name:</label>
